# weld-deps

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
examples/code_of_copper/: beet.yaml
examples/download_smithed_modrinth/: beet.yaml
examples/download_source/: beet.yaml
examples/fail_PackNotFoundError/: beet.yaml
examples/fail_PackVersionNotFoundError/: beet.yaml
examples/git_source/: beet.yaml
examples/list_format/: beet.yaml
examples/load_local/: beet.yaml
examples/mecha_auto_include/: beet.yml
examples/mecha_auto_include/data/test/function/: bookshelf.mcfunction  test.mcfunction
examples/only_modrinth_deps/: beet.yaml
examples/only_smithed_deps/: beet.yaml
examples/pack1/: beet.yaml
examples/smithed_and_modrinth/: beet.yaml
examples/smithed_and_modrinth_2/: beet.yaml
tests/: test_example.py  test_plugin.py
tests/snapshots/example__build_code_of_copper__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_download_source__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_list_format__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_list_format__1.resource_pack/: pack.mcmeta
tests/snapshots/example__build_load_local__1.resource_pack/: pack.mcmeta
tests/snapshots/example__build_mecha_auto_include__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_only_smithed_deps__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_smithed_and_modrinth__0.data_pack/: pack.mcmeta
tests/snapshots/example__build_smithed_and_modrinth__1.resource_pack/: pack.mcmeta
weld_deps/: __init__.py  dep.py  main.py  utils.py
weld_deps/contrib/: mecha_auto_include.py
weld_deps/examples/pack1/: beet.yaml
weld_deps/examples/pack_no_versions/: beet.yaml
weld_deps/examples/pack_not_found/: beet.yaml
(+2534 files in other folders)
