[tool.poetry]
name = "weld-deps"
version = "0.15.0"
description = ""
authors = ["edayot"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
smithed = {version = ">=0.16.0", optional = true}
beet=">=0.104.1"
requests = "^2.31.0"
semver = "^3.0.2"

[tool.poetry.extras]
smithed = ["smithed"]

[tool.poetry.dev-dependencies]
black = "^24.4.2"
pytest-insta = "^0.3.0"
pytest-cov = "^6.0.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--cov=weld_deps --cov-report term"
