[project]
name = "weld-deps"
version = "0.15.4"
description = ""
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
    { name = "edayot" },
]

dependencies = [
    "beet>=0.113.0b10",
    "requests>=2.31.0",
    "semver>=3.0.2",
]

[project.optional-dependencies]
smithed = [
    "smithed>=0.16.0",
    "mecha>=0.102.0b2",
    "bolt>=0.50.0b5",
]

[dependency-groups]
dev = [
    "black>=24.4.2",
    "pytest-insta>=0.3.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
typeCheckingMode = "basic"

[tool.pytest.ini_options]
addopts = "--cov=weld_deps --cov-report term"
